--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -35,6 +35,8 @@
             background-color: #02d630;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930446628128166"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Welcome , <%= user.username %>!</h1>
