--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login & Signup Form</title>
     <link rel="stylesheet" href="style.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930446628128166"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="wrapper">
