--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -37,6 +37,7 @@
     </style>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930446628128166"
      crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-2930446628128166">
 </head>
 <body>
     <h1>Welcome , <%= user.username %>!</h1>
