--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930446628128166"
      crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-2930446628128166">
 </head>
 <body>
     <section class="wrapper">
